# compute-shader-raytracer

./: .gitignore  CMakeLists.txt  README.md
shaders/: compute.comp  fragment.frag  vertex.vert
src/: Buffer.cpp  ComputeRaytraceRenderer.cpp  ComputeRaytraceRenderer.hpp  Program.cpp  Shader.cpp  ShaderStructs.hpp  Texture.cpp  VertexArray.cpp  glUtil.hpp  main.cpp
